Updated to Nazgul Tools version 4.1.1. Fixed copyright.