@@ -3,7 +3,7 @@
   ~ #%L
   ~   se.jguru.nazgul.core.poms.core-parent.nazgul-core-parent
   ~   %%
-  ~   Copyright (C) 2010 - 2013 jGuru Europe AB
+  ~   Copyright (C) 2010 - 2015 jGuru Europe AB
   ~   %%
   ~   Licensed under the jGuru Europe AB license (the "License"), based
   ~   on Apache License, Version 2.0; you may not use this file except
@@ -124,7 +124,9 @@
 
             <properties>
                 <jpa.provider.class>org.eclipse.persistence.jpa.PersistenceProvider</jpa.provider.class>
-                <surefire.argLine>-javaagent:${basedir}/target/eclipselink.jar -Dfile.encoding=UTF-8 -Xmx1024m -XX:MaxPermSize=512m</surefire.argLine>
+
+                <surefire.javaagent>-javaagent:${basedir}/target/eclipselink.jar</surefire.javaagent>
+                <surefire.argLine>${surefire.javaagent} ${surefire.memconf} ${surefire.encoding}</surefire.argLine>
             </properties>
 
             <dependencyManagement>
@@ -200,119 +202,6 @@
                                             <version>${org.eclipse.persistence.version}</version>
                                             <outputDirectory>${project.build.directory}</outputDirectory>
                                             <destFileName>eclipselink.jar</destFileName>
-                                        </artifactItem>
-                                    </artifactItems>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-
-        <profile>
-            <id>openjpa1</id>
-            <activation>
-                <property>
-                    <name>jpaSpec</name>
-                    <value>openjpa1</value>
-                </property>
-            </activation>
-
-            <properties>
-                <!--
-                    Ensure that the required properties for using OpenJPA as the persistence provider exists.
-                -->
-                <openjpa.version>2.2.2</openjpa.version>
-                <openjpa.includes>se/jguru/nazgul/**/*.class</openjpa.includes>
-                <openjpa.excludes>se/jguru/nazgul/core/xmlbinding/spi/jaxb/transport/EntityWrapper.class</openjpa.excludes>
-                <openjpa.persistenceXmlPath>weaving/openjpa/v1/${project.artifactId}-persistence.xml</openjpa.persistenceXmlPath>
-                <openjpa.persistenceXmlFile>${project.basedir}/src/main/${openjpa.persistenceXmlPath}</openjpa.persistenceXmlFile>
-                <openjpa.persistenceXmlTestFile>${project.basedir}/src/test/${openjpa.persistenceXmlPath}</openjpa.persistenceXmlTestFile>
-                <jpa.provider.class>org.apache.openjpa.persistence.PersistenceProviderImpl</jpa.provider.class>
-                <surefire.argLine>-javaagent:${basedir}/target/openjpa.jar -Dfile.encoding=UTF-8 -Xmx1024m -XX:MaxPermSize=512m</surefire.argLine>
-            </properties>
-
-            <dependencies>
-                <dependency>
-                    <groupId>javax.persistence</groupId>
-                    <artifactId>persistence-api</artifactId>
-                    <version>1.0</version>
-                    <scope>provided</scope>
-                </dependency>
-            </dependencies>
-
-            <build>
-                <pluginManagement>
-                    <plugins>
-                        <!--
-                            OpenJPA static enhancement.
-                        -->
-                        <plugin>
-                            <groupId>org.apache.openjpa</groupId>
-                            <artifactId>openjpa-maven-plugin</artifactId>
-                            <version>${openjpa.version}</version>
-                            <configuration>
-                                <includes>${openjpa.includes}</includes>
-                                <excludes>${openjpa.excludes}</excludes>
-                                <addDefaultConstructor>true</addDefaultConstructor>
-                                <enforcePropertyRestrictions>true</enforcePropertyRestrictions>
-                            </configuration>
-                            <executions>
-                                <!-- execution>
-                                    <id>weave-openjpa-classes</id>
-                                    <phase>process-classes</phase>
-                                    <goals>
-                                        <goal>enhance</goal>
-                                    </goals>
-                                    <configuration>
-                                        <persistenceXmlFile>${openjpa.persistenceXmlFile}</persistenceXmlFile>
-                                    </configuration>
-                                </execution -->
-                                <execution>
-                                    <id>weave-openjpa-test-classes</id>
-                                    <phase>process-test-classes</phase>
-                                    <goals>
-                                        <goal>test-enhance</goal>
-                                    </goals>
-                                    <configuration>
-                                        <persistenceXmlFile>${openjpa.persistenceXmlTestFile}</persistenceXmlFile>
-                                    </configuration>
-                                </execution>
-                            </executions>
-                            <dependencies>
-                                <dependency>
-                                    <groupId>org.apache.openjpa</groupId>
-                                    <artifactId>openjpa</artifactId>
-                                    <version>${openjpa.version}</version>
-                                </dependency>
-                            </dependencies>
-                        </plugin>
-                    </plugins>
-                </pluginManagement>
-
-                <plugins>
-                    <!--
-                        Use the dependency plugin to copy the OpenJPA runtime
-                        to the target directory.
-                    -->
-                    <plugin>
-                        <artifactId>maven-dependency-plugin</artifactId>
-                        <executions>
-                            <execution>
-                                <id>copy</id>
-                                <phase>process-resources</phase>
-                                <goals>
-                                    <goal>copy</goal>
-                                </goals>
-                                <configuration>
-                                    <artifactItems>
-                                        <artifactItem>
-                                            <groupId>org.apache.openjpa</groupId>
-                                            <artifactId>openjpa</artifactId>
-                                            <version>${openjpa.version}</version>
-                                            <outputDirectory>${project.build.directory}</outputDirectory>
-                                            <destFileName>openjpa.jar</destFileName>
                                         </artifactItem>
                                     </artifactItems>
                                 </configuration>
@@ -427,6 +316,56 @@
                     </plugin>
                 </plugins>
             </build>
+        </profile>
+
+        <profile>
+            <id>hibernate</id>
+            <activation>
+                <property>
+                    <name>jpaProvider</name>
+                    <value>hibernate</value>
+                </property>
+            </activation>
+
+            <properties>
+                <!-- JPA-related properties -->
+                <jpa.provider.class>org.hibernate.jpa.HibernatePersistenceProvider</jpa.provider.class>
+
+                <!-- Hibernate versions -->
+                <hibernate.version>4.3.10.Final</hibernate.version>
+            </properties>
+
+            <dependencyManagement>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.hibernate</groupId>
+                        <artifactId>hibernate-core</artifactId>
+                        <version>${hibernate.version}</version>
+                        <scope>provided</scope>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.hibernate</groupId>
+                        <artifactId>hibernate-entitymanager</artifactId>
+                        <version>${hibernate.version}</version>
+                        <scope>provided</scope>
+                    </dependency>
+                </dependencies>
+            </dependencyManagement>
+
+            <dependencies>
+                <dependency>
+                    <groupId>org.hibernate</groupId>
+                    <artifactId>hibernate-core</artifactId>
+                    <version>${hibernate.version}</version>
+                    <scope>provided</scope>
+                </dependency>
+                <dependency>
+                    <groupId>org.hibernate</groupId>
+                    <artifactId>hibernate-entitymanager</artifactId>
+                    <version>${hibernate.version}</version>
+                    <scope>provided</scope>
+                </dependency>
+            </dependencies>
         </profile>
     </profiles>
 
